# packages/repositories/src/entity/User.ts
@@ -1,0 +1,18 @@
+import 'reflect-metadata'
+import { Entity, PrimaryGeneratedColumn, Column } from "typeorm"
+
+@Entity()
+export class User {
+    @PrimaryGeneratedColumn()
+    id: number = 0;
+  
+    @Column()
+    firstName: string = '';
+  
+    @Column()
+    lastName: string = '';
+  
+    @Column()
+    age: number = 0;
+
+}
